@@ -105,7 +105,7 @@ old_timestamp=198309271735.59
 curdir=`pwd`
 
 # Make our wrapper scripts accessible by default.
-PATH="`pwd`$PATH_SEPARATOR$PATH"; export PATH
+PATH="$curdir$PATH_SEPARATOR$PATH"; export PATH
 
 
 ## -------------------------------------------------------- ##
@@ -395,10 +395,10 @@ case " $required " in
     esac
     # Libtool cannot cope with spaces in the build tree.  Our testsuite setup
     # cannot cope with spaces in the source tree name for Libtool and gettext
-    # tests.  Using just "`pwd`" for the check here is ok, since the further
+    # tests.  Using just `$curdir' for the check here is ok, since the further
     # temporary subdirectory where the test will be run is ensured not to
     # contain any space.
-    case $testsrcdir,`pwd` in
+    case $testsrcdir,$curdir in
       *\ * | *\	*) exit 77;;
     esac
     ACLOCAL="$ACLOCAL -Wno-syntax -I $top_testsrcdir/m4 $extra_includes -I $aclocaldir"
