@@ -1,5 +1,10 @@
 2010-11-10  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Tests defs: prefer "$curdir" over "`pwd`".
+	* tests/defs.in: We already save the value of `pwd` in $curdir
+	early in the file, so there no need to recalculate it later, when
+	the current working directory is not changed.
+
 	Tests defs: use `$me' in more error messages.
 	* tests/defs.in: Also use `$me' in error messages referring to
 	missing `defs' or `defs.in', since that variable is now defined
